--- a/pages/dao/[dao]/proposals/proposal.module.scss
+++ b/pages/dao/[dao]/proposals/proposal.module.scss
@@ -28,6 +28,7 @@
 .breadcrumbs {
   align-items: center;
   grid-area: breadcrumbs;
+  margin-bottom: 18px;
 }
 
 .mobileActions {
