--- a/pages/dao/[dao]/treasury/tokens/tokens.module.scss
+++ b/pages/dao/[dao]/treasury/tokens/tokens.module.scss
@@ -3,7 +3,7 @@
 
 .root {
   display: grid;
-  grid-row-gap: 14px;
+  grid-row-gap: 24px;
   grid-template-areas:
     'breadcrumb breadcrumb'
     'dao dao'
@@ -17,35 +17,10 @@
     'pagination pagination';
   grid-template-columns: 2fr 1fr;
   padding-top: 56px;
-}
 
-.breadcrumb {
-  @extend %caption1;
-  align-items: center;
-  color: var(--color-neutral-70);
-  display: flex;
-  gap: 8px;
-  grid-area: breadcrumb;
-  margin-bottom: 42px;
-  position: relative;
-
-  .link {
-    align-items: center;
-    display: flex;
-  }
-
-  .activeLink {
-    color: var(--color-primary-50);
-  }
-
-  .daoFlag {
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: contain;
-    height: 42px;
-    left: -42px;
-    position: absolute;
-    width: 42px;
+  .breadcrumbs {
+    grid-area: breadcrumb;
+    margin-bottom: 18px;
   }
 }
 
